어제버튼 추가
시작일, 종료일 구간 지정

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                   </button>
                   <button
                     class="btn btn-default"
+                    data-value="-1"
+                    data-toggle="assign"
+                  >
+                    어제
+                  </button>
+                  <button
+                    class="btn btn-default"
                     data-value="30"
                     data-toggle="assign"
                   >
